--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -5,7 +5,6 @@ applications:
   - route: allocations-pal-david-belmez.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-david-belmez.apps.evans.pal.pivotal.io
   services:
   - tracker-allocations-database
+  - tracker-service-registry
